--- a/argocd/apps/infra/storage/minio/manifests/vs.yaml
+++ b/argocd/apps/infra/storage/minio/manifests/vs.yaml
@@ -8,9 +8,9 @@ spec:
   - minio.yanello.net
   gateways:
   - istio-system/kube-gateway
-  http:
+  https:
   - route:
     - destination:
-        host: operator
+        host: sts
         port:
-          number: 4221
+          number: 4223
