--- a/argocd/apps/infra/storage/minio/manifests/vs.yaml
+++ b/argocd/apps/infra/storage/minio/manifests/vs.yaml
@@ -1,16 +1,16 @@
-# ---
-# apiVersion: networking.istio.io/v1alpha3
-# kind: VirtualService
-# metadata:
-#   name: minio-vs
-# spec:
-#   hosts:
-#   - minio.yanello.net
-#   gateways:
-#   - istio-system/kube-gateway
-#   http:
-#   - route:
-#     - destination:
-#         host: operator
-#         port:
-#           number: 4221
+---
+apiVersion: networking.istio.io/v1alpha3
+kind: VirtualService
+metadata:
+  name: minio-vs
+spec:
+  hosts:
+  - minio.yanello.net
+  gateways:
+  - istio-system/kube-gateway
+  http:
+  - route:
+    - destination:
+        host: myminio-console
+        port:
+          number: 9443
