--- a/argocd/apps/infra/storage/minio/manifests/vs.yaml
+++ b/argocd/apps/infra/storage/minio/manifests/vs.yaml
@@ -8,9 +8,11 @@ spec:
   - minio.yanello.net
   gateways:
   - istio-system/kube-gateway
-  http:
+  tls:
   - match:
     - port: 443
+      sniHosts:
+        - minio.yanello.net
     route:
     - destination:
         host: myminio-console
