minio scale down

--- a/argocd/apps/infra/storage/minio/kustomization.yaml
+++ b/argocd/apps/infra/storage/minio/kustomization.yaml
@@ -3,6 +3,14 @@ kind: Kustomization
 
 resources:
   - manifests/vs.yaml
+  
+patches:
+- patch: |-
+    - op: replace
+      path: /spec/replicas
+      value: 0
+  target:
+    kind: Deployment
 
 helmCharts:
     - name: operator
