istio inject minio

--- a/argocd/apps/infra/storage/minio/kustomization.yaml
+++ b/argocd/apps/infra/storage/minio/kustomization.yaml
@@ -3,7 +3,10 @@ kind: Kustomization
 
 resources:
   - manifests/vs.yaml
-  
+
+commonLabels:
+  istio-injection: enabled
+
 patches:
 - patch: |-
     - op: replace
