--- a/argocd/apps/infra/storage/minio/manifests/tenant-vals.yaml
+++ b/argocd/apps/infra/storage/minio/manifests/tenant-vals.yaml
@@ -14,4 +14,4 @@ tenant:
                       - marcus-server
   certificate:
     externalCaCertSecret:
-      name: minio-public-cert
+      - name: minio-public-cert
