--- a/argocd/apps/infra/storage/minio/manifests/cert.yaml
+++ b/argocd/apps/infra/storage/minio/manifests/cert.yaml
@@ -8,6 +8,6 @@ spec:
   - "minio.yanello.net"
   secretName: minio-cert
   issuerRef:
-    name: letsencrypt-staging
+    name: letsencrypt-prod
     kind: ClusterIssuer
     group: cert-manager.io
