--- a/argocd/apps/infra/storage/minio/kustomization.yaml
+++ b/argocd/apps/infra/storage/minio/kustomization.yaml
@@ -4,7 +4,7 @@ kind: Kustomization
 resources:
   - manifests/vs.yaml
   - manifests/ns.yaml
-  - manifests/cert.yaml
+  #- manifests/cert.yaml
 
 patches:
   - patch: |-
