--- a/argocd/apps/infra/storage/minio/manifests/tenant-vals.yaml
+++ b/argocd/apps/infra/storage/minio/manifests/tenant-vals.yaml
@@ -12,6 +12,5 @@ tenant:
                     operator: In
                     values:
                       - marcus-server
-  # certificate:
-  #   externalCaCertSecret:
-  #     - name: minio-cert
+  certificate:
+    requestAutoCert: false
