--- a/argocd/apps/infra/storage/minio/kustomization.yaml
+++ b/argocd/apps/infra/storage/minio/kustomization.yaml
@@ -20,10 +20,10 @@ helmCharts:
     releaseName: operator
     repo: https://operator.min.io
     version: "7.0.0"
-    valuesFile: ./manifests/op-vals.yaml
+    valuesFile: ./manifests/values.yaml
   - name: tenant
     namespace: minio
     releaseName: tenant
     repo: https://operator.min.io
     version: "7.0.0"
-    valuesFile: ./manifests/tenant-vals.yaml
+    valuesFile: ./manifests/values.yaml
