--- a/argocd/apps/infra/storage/minio/kustomization.yaml
+++ b/argocd/apps/infra/storage/minio/kustomization.yaml
@@ -6,6 +6,9 @@ resources:
   - manifests/ns.yaml
   #- manifests/cert.yaml
 
+generators:
+  - manifests/secret-generator.yaml
+
 patches:
   - patch: |-
       - op: replace
