--- a/argocd/apps/infra/storage/minio/manifests/secrets.yaml
+++ b/argocd/apps/infra/storage/minio/manifests/secrets.yaml
@@ -2,6 +2,8 @@ apiVersion: v1
 kind: Secret
 metadata:
     name: myminio-env-configuration
+    annotations:
+        kustomize.config.k8s.io/behavior: replace
 type: Opaque
 data:
     config.env: ENC[AES256_GCM,data:EbBO0WJ8KedpqMWAnkkDV/6maysd9OEqqyie3qpNDIXYtjBEZ4mcx4c/bNdQXqJ29YBXiyRXJzxyPeva156p3b1cyTqJpdgzEloryuIx1y0HwZJpoix/TXul8zcfl0OPf9NDqsTYTEQgnVkwbcNh2RhmT+CwJEdTg6vWiw==,iv:iE8EXpaCCOgyMeGbwVOJtUJRvlXmWlWK4OUPHc1KlI4=,tag:cumfQbo3OVha7fMmy9EN6A==,type:str]
@@ -20,8 +22,8 @@ sops:
             NE40enY1a3NZbVljYmpyNDRFSUZ5RTAKZZhEGkeVjJNT+kbv7xyxePum1RfP1OUw
             +RgCoroHJyrxhmPCmoG09BcR4GhWK6pvkXel+qronUrgHNq2BRydag==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-02-20T04:13:43Z"
-    mac: ENC[AES256_GCM,data:8YN1C61aG8w2DSdmp6mPMDuU4IfPqMG1ZhoH80kIjYUCMTzlcd1Im7ZNcpcdSljYuzcRgIXb04PYiLLtJi2icFSx1xD3jXC1F5gbKCzLaOgfmXy7Rd8e9KfxbtDMWLLCopxrYaEevt7nkXxfeLvQAu25d0OwXDsuqYM4S1penTg=,iv:oNph7JCboDO8XaeIQJ1s58rIiPJrDB0SRYxyqX0zg+8=,tag:abWCDAFJpNc6OAGF8oFIOA==,type:str]
+    lastmodified: "2025-02-20T04:15:57Z"
+    mac: ENC[AES256_GCM,data:Pw4co+gr5bEetea7u3DDF2fTFVdwFbUojJIpJZqih3hvsx2bE6PgIR3jevQvpBkJbFDk1mntAaoH8ejdP+k7KhaIKdORWScG3vRO3JH7DpDaOF8drnk7kS6SC5PM1HXHh2v05oaGAiHQYbNJaeN2jclV1YMDf/El9BJb7ETMDFU=,iv:nbceC5pGQyVOCHwYJa5LFZIEx1xmoH9/QDRl4ja8xA4=,tag:bYKpy/YR50/R4P5qU4dXDg==,type:str]
     pgp: []
     unencrypted_regex: ^(apiVersion|metadata|kind|type)$
     version: 3.9.4
