minio api port3

--- a/argocd/apps/infra/storage/minio/manifests/vs.yaml
+++ b/argocd/apps/infra/storage/minio/manifests/vs.yaml
@@ -27,6 +27,6 @@ spec:
   http:
     - route:
         - destination:
-            host: minio
+            host: myminio-hl
             port:
-              number: 80
+              number: 9000
