minio api port6

--- a/argocd/apps/infra/storage/minio/manifests/vs.yaml
+++ b/argocd/apps/infra/storage/minio/manifests/vs.yaml
@@ -27,6 +27,6 @@ spec:
   http:
     - route:
         - destination:
-            host: myminio-hl
+            host: minio
             port:
               number: 80
