--- a/argocd/apps/infra/storage/longhorn/manifests/values.yaml
+++ b/argocd/apps/infra/storage/longhorn/manifests/values.yaml
@@ -1,8 +1,8 @@
 defaultSettings:
-  defaultDataPath: "/app/longhorn/"
+  defaultDataPath: "/zpool/k8s/longhorn/"
 
 preUpgradeChecker:
-  jobEnabled: false
+  jobEnabled: true
 
 longhornManager:
   tolerations:
