--- a/argocd/apps/infra/renovate/values.yaml
+++ b/argocd/apps/infra/renovate/values.yaml
@@ -73,6 +73,11 @@ renovate:
           "overridePackageName": "ghcr.io/tektoncd/pipeline/events-a9042f7efb0cbade2a868a1ee5ddd52c",
           "groupName": "Tekton",
           "registryUrls": ["ghcr.io"]
+        },
+        {
+          "matchUpdateTypes": ["minor", "patch"],
+          "matchCurrentVersion": "!/^0/",
+          "automerge": true
         }
       ]
     }
