--- a/argocd/apps/infra/monitoring/kustomization.yaml
+++ b/argocd/apps/infra/monitoring/kustomization.yaml
@@ -4,6 +4,7 @@ kind: Kustomization
 helmCharts:
   - name: victoria-metrics-k8s-stack
     releaseName: victoria-metrics-k8s-stack
+    namespace: monitoring
     repo: https://victoriametrics.github.io/helm-charts/
     version: "0.36.2"
     valuesFile: values.yaml
