--- a/argocd/apps/infra/monitoring/kustomization.yaml
+++ b/argocd/apps/infra/monitoring/kustomization.yaml
@@ -1,6 +1,9 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
+resources:
+  - ./manifests/vs.yaml
+
 helmCharts:
   - name: victoria-metrics-k8s-stack
     releaseName: victoria-metrics-k8s-stack
