longhorn rep count

--- a/argocd/apps/infra/storage/longhorn/manifests/values.yaml
+++ b/argocd/apps/infra/storage/longhorn/manifests/values.yaml
@@ -1,5 +1,6 @@
 defaultSettings:
   defaultDataPath: "/app/longhorn/"
+  defaultReplicaCount: 2
 
 preUpgradeChecker:
   jobEnabled: true
@@ -9,8 +10,12 @@ longhornManager:
     - key: "node-role.kubernetes.io/control-plane"
       operator: "Exists"
       effect: "NoSchedule"
+
 longhornDriver:
   tolerations:
     - key: "node-role.kubernetes.io/control-plane"
       operator: "Exists"
       effect: "NoSchedule"
+
+persistence:
+  defaultClassReplicaCount: 2
