--- a/argocd/apps/resume/manifests/resume-secrets.enc.yaml
+++ b/argocd/apps/resume/manifests/resume-secrets.enc.yaml
@@ -5,14 +5,12 @@ metadata:
 type: Opaque
 stringData:
     DB_PASSWORD: ENC[AES256_GCM,data:Ng4ch3oY9Ng=,iv:nhNpN1rQiVGtsX3q4wce3+EdQGEm3CSHJiNOt6Csgtw=,tag:ChWbbFSwy69DB2urbjZIYA==,type:str]
-    MINIO_ROOT_PASSWORD: ENC[AES256_GCM,data:fsoAThraUi1IgQ==,iv:a3q6Et5ewCKl4ix3pdYznAKcNLaw+KFAHMFY2+RGHCo=,tag:vtLOJRWjkhzPNUrLQyW8qQ==,type:str]
-    MINIO_ROOT_USER: ENC[AES256_GCM,data:5fgZl9lrahAIZQ==,iv:7hzd6TQXpw0UQRiWs5+Y3ZmV6ojGXbSbfAN1XhicUpI=,tag:pdwJlkWdmwhBnCSRdoba2w==,type:str]
     TOKEN: ENC[AES256_GCM,data:Pt9+tac2Al0CL1A7,iv:phRfL/pNl2rMpGT1Phf+ZqUPIowh+E8kRG1KgbqHrW4=,tag:gMRi6P/hEe8pJVrjk7z+hQ==,type:str]
-    PUBLIC_URL: ENC[AES256_GCM,data:pJLiBvisscC2XKhaX1DfyMN/CXixXct1s5XR,iv:L+bKmkmuNvgSFPpMXqaY+X0kHY5ZIebElxUaC+oKpiY=,tag:Y+5pwiD9H9hDBJ7pwcjlBw==,type:str]
-    STORAGE_URL: ENC[AES256_GCM,data:UJ1f12NPeFHGq0kNObNaHFEerDKX+3Jwb/nIOFols06v,iv:uyWCw6FZsB4AW/RPU6XnLVeFPG7UYd97mP5fsALpv+0=,tag:V9705JgaMXDB4lfWScG7zw==,type:str]
     DATABASE_URL: ENC[AES256_GCM,data:K9/YJbPQaHW6ElV4jQII4uM6EMeYLLY3lzgNhLA0gL9JAgpMM4I4XXEOm9u+xTMD9fdcrUg=,iv:KPMdWY6iqlbWokNCtmu4b3qXxZ/WKjfswRxIXVq7WhU=,tag:BPcmCeYQtK7t+IvZGNAO8g==,type:str]
     ACCESS_TOKEN_SECRET: ENC[AES256_GCM,data:FNDUPp1CoWtBwTM6MgKIIfGy3Q==,iv:Hq9BhzrSDZb1ZGNcCxOoxFjwJ62NUVocIIMX54fdefc=,tag:Z6EUK8yW/fc43pRHPDlZPA==,type:str]
     REFRESH_TOKEN_SECRET: ENC[AES256_GCM,data:Jmi83/UsmZ6TSCBxKqUB20BM8GU=,iv:IFGNSp0qMC5a2VCRQqxGIP15TF7kj7i00/t03VkWd18=,tag:fd+puF8eaPvZ3sPNmHSpiw==,type:str]
+    STORAGE_ACCESS_KEY: ENC[AES256_GCM,data:eDoz/bAvaTKd8zEMfXizjY+ud88=,iv:axgdIazTcrbKQxZdMH6jFrNa/PMcYPgqvK85I66EdwI=,tag:QQrpqrx7qV1eN1LXwaz4kQ==,type:str]
+    STORAGE_SECRET_KEY: ENC[AES256_GCM,data:7Ft5pKYmpICCKQ57b/mdcKqgiDleE6urkkswlaA1C/h189ymHyBLOA==,iv:ceUapOymw+AR0yeRdOHihZC0rd4iHNoPhUaXB+wEvZ8=,tag:O3dsMI+b5ah8CT2eZ7nIkQ==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -28,8 +26,8 @@ sops:
             NE40enY1a3NZbVljYmpyNDRFSUZ5RTAKZZhEGkeVjJNT+kbv7xyxePum1RfP1OUw
             +RgCoroHJyrxhmPCmoG09BcR4GhWK6pvkXel+qronUrgHNq2BRydag==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-01-28T23:01:44Z"
-    mac: ENC[AES256_GCM,data:KLPN0X8W5sEjccr/rS63f9CKOnpfM4XQbUO77HjCuVkhurSQVIquecDH6PCGHg/CjhVIj6fw6WIY87aAB3DQMX9hQK2em1AFlBY1mfxPnGWxcPbo7TklOxFbq/sGnwH2h9KMM60B2JF29h35uHmH/YFlrd54lzO2bwJ5nmjBppg=,iv:VvpZRTo7Fu7ttKlhNmKlK2xE6VtzsHbQuxnMmb7QLzM=,tag:KN5Z8R4VLI+AacA++e+1NA==,type:str]
+    lastmodified: "2025-02-21T21:44:54Z"
+    mac: ENC[AES256_GCM,data:W7u0vGsSj0uNpX7JDhmUOBBsAcZMrIH2l/fSvYZRtY1NoKo2q7CtZRX5ZyAxlUY9kT8MlEF8V6MkzHrgNNmYHnJKkS2mrj8lz4iJo971u0ZgzNC33eScCSEST/QxUbZ5xmYHrOCronSMmebVfemhj8AiEe2ZnyNkJJwgV0bezQY=,iv:4YFJjZ7eVUlOws6EANhtU6817i8LDtB/I/xuXTp39cE=,tag:JiYneMbrJ0N214CG0+umqQ==,type:str]
     pgp: []
     unencrypted_regex: ^(apiVersion|metadata|kind|type)$
-    version: 3.9.1
+    version: 3.9.4
