--- a/argocd/apps/resume/kustomization.yaml
+++ b/argocd/apps/resume/kustomization.yaml
@@ -2,18 +2,10 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
-- deploy.yaml
-- ingress.yaml
-- service.yaml
-- pvc.yaml
+- manifests/deploy.yaml
+- manifests/vs.yaml
+- manifests/service.yaml
+- manifests/pvc.yaml
 
 generators:
-- secret-generator.yaml
-
-patches:
-- patch: |-
-    - op: replace
-      path: /spec/replicas
-      value: 0
-  target:
-    kind: Deployment
+- manifests/secret-generator.yaml
