--- a/argocd/apps/resume/manifests/vs.yaml
+++ b/argocd/apps/resume/manifests/vs.yaml
@@ -5,6 +5,7 @@ metadata:
 spec:
   hosts:
     - rxresume.yanello.net
+    - resume.yanello.net
   gateways:
     - istio-system/kube-gateway
   http:
