allow resume publically

--- a/argocd/apps/infra/istio/resources/authPol.yaml
+++ b/argocd/apps/infra/istio/resources/authPol.yaml
@@ -8,7 +8,7 @@ spec:
     # Allow all traffic from internal network (LAN)
     - from:
         - source:
-            ipBlocks:
+            remoteIpBlocks:
               - "10.0.0.0/8"
               - "172.16.0.0/12"
               - "192.168.0.0/16"
@@ -33,3 +33,19 @@ spec:
               - immich.yanello.net
               - bitwarden.yanello.net
               - mealie.yanello.net
+    - from:
+        - source:
+            notRemoteIpBlocks:
+              - "10.0.0.0/8"
+              - "172.16.0.0/12"
+              - "192.168.0.0/16"
+      to:
+        - operation:
+            hosts:
+              - resume.yanello.net
+              - rxresume.yanello.net
+            paths:
+              - "/marcus/latest"
+              - "/artboard/{**}"
+              - "/assets/{**}"
+              - "/api/resume/public/{**}"
