--- a/argocd/apps/infra/istio/resources/authPol.yaml
+++ b/argocd/apps/infra/istio/resources/authPol.yaml
@@ -33,3 +33,15 @@ spec:
               - immich.yanello.net
               - bitwarden.yanello.net
               - mealie.yanello.net
+    - from:
+        - source:
+            notRemoteIpBlocks:
+              - "10.0.0.0/8"
+              - "172.16.0.0/12"
+              - "192.168.0.0/16"
+      to:
+        - operation:
+            hosts:
+              - resume.yanello.net
+            paths:
+              - exact: "/marcus/latest"
