allow resume publically2

--- a/argocd/apps/infra/istio/resources/authPol.yaml
+++ b/argocd/apps/infra/istio/resources/authPol.yaml
@@ -44,4 +44,4 @@ spec:
             hosts:
               - resume.yanello.net
             paths:
-              - exact: "/marcus/latest"
+              - "/marcus/latest"
