--- a/argocd/apps/infra/istio/resources/authPol.yaml
+++ b/argocd/apps/infra/istio/resources/authPol.yaml
@@ -43,5 +43,6 @@ spec:
         - operation:
             hosts:
               - resume.yanello.net
+              - rxresume.yanello.net
             paths:
               - "/marcus/latest"
