--- a/argocd/apps/infra/istio/resources/authPol.yaml
+++ b/argocd/apps/infra/istio/resources/authPol.yaml
@@ -44,5 +44,5 @@ spec:
             hosts:
               - resume.yanello.net
               - rxresume.yanello.net
-            paths:
-              - "/marcus/latest"
+            # paths:
+            #   - "/marcus/latest"
