allow resume publically7

--- a/argocd/apps/infra/istio/resources/authPol.yaml
+++ b/argocd/apps/infra/istio/resources/authPol.yaml
@@ -45,4 +45,4 @@ spec:
               - resume.yanello.net
               - rxresume.yanello.net
             paths:
-              - "*"
+              - "*marcus*"
