allow resume publically12

--- a/argocd/apps/infra/istio/resources/authPol.yaml
+++ b/argocd/apps/infra/istio/resources/authPol.yaml
@@ -39,6 +39,8 @@ spec:
               - "10.0.0.0/8"
               - "172.16.0.0/12"
               - "192.168.0.0/16"
+            remoteIpBlocks:
+              - "192.168.0.0/16"
       to:
         - operation:
             hosts:
