allow resume publically14

--- a/argocd/apps/infra/istio/resources/authPol.yaml
+++ b/argocd/apps/infra/istio/resources/authPol.yaml
@@ -19,7 +19,7 @@ spec:
               - "10.0.0.0/8"
               - "172.16.0.0/12"
               - "192.168.0.0/16"
-            remoteIpBlocks:
+            ipBlocks:
               - "192.168.0.0/16"
       to:
         - operation:
@@ -41,7 +41,7 @@ spec:
               - "10.0.0.0/8"
               - "172.16.0.0/12"
               - "192.168.0.0/16"
-            remoteIpBlocks:
+            ipBlocks:
               - "192.168.0.0/16"
       to:
         - operation:
