allow resume publically16

--- a/argocd/apps/infra/istio/resources/authPol.yaml
+++ b/argocd/apps/infra/istio/resources/authPol.yaml
@@ -11,15 +11,13 @@ spec:
             ipBlocks:
               - "10.0.0.0/8"
               - "172.16.0.0/12"
-              #- "192.168.0.0/16"
+              - "192.168.0.0/16"
     # Allow WAN traffic only to specific subdomains
     - from:
         - source:
             notRemoteIpBlocks:
               - "10.0.0.0/8"
               - "172.16.0.0/12"
-              - "192.168.0.0/16"
-            ipBlocks:
               - "192.168.0.0/16"
       to:
         - operation:
@@ -40,8 +38,6 @@ spec:
             notRemoteIpBlocks:
               - "10.0.0.0/8"
               - "172.16.0.0/12"
-              #- "192.168.0.0/16"
-            ipBlocks:
               - "192.168.0.0/16"
       to:
         - operation:
@@ -49,4 +45,4 @@ spec:
               - resume.yanello.net
               - rxresume.yanello.net
             paths:
-              - "/marcus/*"
+              - "/marcus*"
