allow resume publically23

--- a/argocd/apps/resume/manifests/vs.yaml
+++ b/argocd/apps/resume/manifests/vs.yaml
@@ -16,7 +16,7 @@ spec:
     #           number: 3010
     - match:
       - uri:
-          prefix: "/marcus"
+          prefix: "/marcus/latest"
       route:
         - destination:
             host: rx-resume
