--- a/argocd/apps/infra/storage/longhorn/manifests/values.yaml
+++ b/argocd/apps/infra/storage/longhorn/manifests/values.yaml
@@ -19,3 +19,9 @@ longhornDriver:
 
 persistence:
   defaultClassReplicaCount: 2
+  
+global:
+  tolerations:
+    - key: "node-role.kubernetes.io/control-plane"
+      operator: "Exists"
+      effect: "NoSchedule"
