--- a/argocd/apps/infra/storage/longhorn-system/kustomization.yaml
+++ b/argocd/apps/infra/storage/longhorn-system/kustomization.yaml
@@ -9,7 +9,7 @@ generators:
 
 helmCharts:
     - name: longhorn
-      namespace: longhorn
+      namespace: longhorn-system
       releaseName: longhorn
       repo: https://charts.longhorn.io
       version: "1.8.0"
