move longhorn ns2

--- a/argocd/apps/infra/storage/longhorn-system/manifests/values.yaml
+++ b/argocd/apps/infra/storage/longhorn-system/manifests/values.yaml
@@ -3,7 +3,7 @@ defaultSettings:
   defaultReplicaCount: 2
 
 preUpgradeChecker:
-  jobEnabled: true
+  jobEnabled: false
 
 longhornManager:
   tolerations:
