--- a/argocd/apps/infra/storage/longhorn-system/manifests/values.yaml
+++ b/argocd/apps/infra/storage/longhorn-system/manifests/values.yaml
@@ -1,6 +1,7 @@
 defaultSettings:
   defaultDataPath: "/app/longhorn/"
   defaultReplicaCount: 2
+  taintToleration: "key=value:NoSchedule"
 
 preUpgradeChecker:
   jobEnabled: false
