--- a/argocd/apps/infra/storage/longhorn/manifests/values.yaml
+++ b/argocd/apps/infra/storage/longhorn/manifests/values.yaml
@@ -8,7 +8,7 @@ defaultBackupStore:
   backupTargetCredentialSecret: "minio-access"
 
 preUpgradeChecker:
-  jobEnabled: false
+  jobEnabled: true
 
 persistence:
   defaultClassReplicaCount: 2
