--- a/argocd/apps/resume/manifests/pvc.yaml
+++ b/argocd/apps/resume/manifests/pvc.yaml
@@ -1,12 +1,12 @@
-apiVersion: v1
-kind: PersistentVolumeClaim
-metadata:
-  name: db
-spec:
-  storageClassName: longhorn
-  accessModes:
-    - ReadWriteOnce
-  resources:
-    requests:
-      storage: 100Mi
----
+# apiVersion: v1
+# kind: PersistentVolumeClaim
+# metadata:
+#   name: db
+# spec:
+#   storageClassName: longhorn
+#   accessModes:
+#     - ReadWriteOnce
+#   resources:
+#     requests:
+#       storage: 100Mi
+# ---
