--- a/utils/sleep-pod.yaml
+++ b/utils/sleep-pod.yaml
@@ -16,4 +16,11 @@ spec:
       limits:
         memory: "128Mi"
         cpu: "500m"
+    volumeMounts:
+      - name: data-vol
+        mountPath: /data
   restartPolicy: Never
+  volumes:
+    - name: data-vol
+      persistentVolumeClaim:
+        claimName: db
