--- a/argocd/apps/resume/manifests/sts.yaml
+++ b/argocd/apps/resume/manifests/sts.yaml
@@ -70,7 +70,7 @@ spec:
               protocol: TCP
           volumeMounts:
             - name: pgdata
-              mountPath: /var/lib/postgresql/data
+              mountPath: /var/lib/postgresql/
   volumeClaimTemplates:
     - metadata:
         name: pgdata
