--- a/argocd/apps/minecraft/kustomization.yaml
+++ b/argocd/apps/minecraft/kustomization.yaml
@@ -3,10 +3,9 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
-  - deploy.yaml
+  - sts.yaml
   - svc.yaml
   - vs.yaml
   - cm.yaml
-  - pvc.yaml
 generators:
   - secret-generator.yaml
