--- a/argocd/apps/minecraft/kustomization.yaml
+++ b/argocd/apps/minecraft/kustomization.yaml
@@ -6,11 +6,10 @@ resources:
   - sts.yaml
   - svc.yaml
   - vs.yaml
-  #- cm.yaml
   
 configMapGenerator:
   - name: mc-config
-    files:
+    envs:
       - cm.yaml
 
 generators:
