--- a/argocd/apps/minecraft/cm.yaml
+++ b/argocd/apps/minecraft/cm.yaml
@@ -11,7 +11,5 @@ GENERIC_PACK: https://downloads.gtnewhorizons.com/ServerPacks/GT_New_Horizons_2.
 CUSTOM_SERVER: "/data/lwjgl3ify-forgePatches.jar"
 JVM_OPTS: "-Dfml.readTimeout=180 @java9args.txt"
 SKIP_GENERIC_PACK_UPDATE_CHECK: "true"
-WHITELIST: |
-  "TooMuchDog9800"
-OPS: |
-  "TooMuchDog9800"
+WHITELIST: "TooMuchDog9800"
+OPS: "TooMuchDog9800"
