--- a/argocd/apps/minecraft/cm.yaml
+++ b/argocd/apps/minecraft/cm.yaml
@@ -2,7 +2,7 @@ EULA=TRUE
 DEBUG=true
 VERSION=1.7.10
 MEMORY="8G
-TZ="America/Chicago"
+TZ=America/Chicago
 SNOOPER_ENABLED=false
 TYPE=CUSTOM
 EXEC_DIRECTLY=true
@@ -11,5 +11,5 @@ GENERIC_PACK=https://downloads.gtnewhorizons.com/ServerPacks/GT_New_Horizons_2.7
 CUSTOM_SERVER=/data/lwjgl3ify-forgePatches.jar
 JVM_OPTS=-Dfml.readTimeout=180 @java9args.txt
 SKIP_GENERIC_PACK_UPDATE_CHECK=true
-WHITELIST=TooMuchDog9800
-OPS=TooMuchDog9800
+WHITELIST=MarcusY
+OPS=MarcusY
