--- a/argocd/apps/nextcloud/kustomization.yaml
+++ b/argocd/apps/nextcloud/kustomization.yaml
@@ -34,6 +34,6 @@ helmCharts:
 
 images:
   - name: nextcloud
-    newTag: 29.0.12@sha256:b7b36d25ed9682acc26343a6c40f608b868e5a84f98f3af49b8152a3ce7dfb63
+    newTag: 29.0.8
   - name: docker.io/bitnami/mariadb
     newTag: '10.11@sha256:effbeae0531003615411d7536443604812a8b9f6f8d5bfcc6b6b80848e19759e'
