--- a/argocd/apps/nextcloud/kustomization.yaml
+++ b/argocd/apps/nextcloud/kustomization.yaml
@@ -1,25 +1,9 @@
+apiVersion: kustomize.config.k8s.io/v1beta1
+kind: Kustomization
+
 resources:
   - ./vs.yaml
   - ./cm.yaml
-
-# patches:
-#   - target:
-#       kind: StatefulSet
-#       name: nextcloud-mariadb
-#     patch: |-
-#       - op: replace
-#         path: spec/replicas
-#         value: 0
-#   - target:
-#       kind: Deployment
-#       name: nextcloud
-#     patch: |-
-#       - op: add
-#         path: /spec/template/spec/hostNetwork
-#         value: true
-#       - op: add
-#         path: /spec/template/spec/dnsPolicy
-#         value: ClusterFirstWithHostNet 
 
 generators:
   - ./secret-generator.yaml
@@ -34,6 +18,6 @@ helmCharts:
 
 images:
   - name: nextcloud
-    newTag: 29.0.8
+    newTag: 29.0.12
   - name: docker.io/bitnami/mariadb
     newTag: '10.11@sha256:effbeae0531003615411d7536443604812a8b9f6f8d5bfcc6b6b80848e19759e'
