--- a/argocd/apps/media-server/plex/deploy.yaml
+++ b/argocd/apps/media-server/plex/deploy.yaml
@@ -50,7 +50,7 @@ spec:
           resources:
             limits:
               nvidia.com/gpu: "1"
-              cpu: 4000m
+              cpu: "4"
               memory: 8Gi
             requests:
               nvidia.com/gpu: "1"
