--- a/argocd/apps/media-server/qbittorrent/manifests/deploy.yaml
+++ b/argocd/apps/media-server/qbittorrent/manifests/deploy.yaml
@@ -42,8 +42,8 @@ spec:
         imagePullPolicy: IfNotPresent
         resources:
           requests:
-            memory: "4Gi"
-            cpu: "1"
+            memory: "1Gi"
+            cpu: 50m
           limits:
             memory: "6Gi"
             cpu: "2"
